--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "build": "webpack --config webpack.prod.js",
     "dev": "webpack serve --config webpack.dev.js",
     "deploy": "git subtree push --prefix dist origin gh-pages"
+  },
+  "dependencies": {
+    "copy-webpack-plugin": "^13.0.0"
   }
 }
