Restructured JSON Data for the Projects - Task List - Task. Added logic and Design to display Task List within a Project properly

--- a/src/Data/projectData.json
+++ b/src/Data/projectData.json
@@ -5,15 +5,50 @@
     "contents": [
       {
         "title": "Task List",
-        "description": "This is the first task in the Get Started section."
+        "tasks": [
+          {
+            "title": "Task 1",
+            "description": "This is the first task in the Get Started section."
+          },
+          {
+            "title": "Task 2",
+            "description": "This is the second task in the Get Started section."
+          },
+          {
+            "title": "Task 3",
+            "description": "This is the third task in the Get Started section."
+          }
+        ]
       },
       {
         "title": "Task List",
-        "description": "This is the second task in the Get Started section."
+        "tasks": [
+          {
+            "title": "Task 1",
+            "description": "This is the first task in the Get Started section."
+          },
+          {
+            "title": "Task 2",
+            "description": "This is the fifth task in the Get Started section."
+          }
+        ]
       },
       {
         "title": "Task List",
-        "description": "This is the third task in the Get Started section."
+        "tasks": [
+          {
+            "title": "Task 1",
+            "description": "This is the first task in the Get Started section."
+          },
+          {
+            "title": "Task 2",
+            "description": "This is the second task in the Get Started section."
+          },
+          {
+            "title": "Task 3",
+            "description": "This is the third task in the Get Started section."
+          }
+        ]
       }
     ]
   },
