Added functionality for the Projects to make horizontal scrolling possible with the scrollbar and mouse drag

--- a/src/Data/projectData.json
+++ b/src/Data/projectData.json
@@ -49,6 +49,57 @@
             "description": "This is the third task in the Get Started section."
           }
         ]
+      },
+      {
+        "title": "Task List",
+        "tasks": [
+          {
+            "title": "Task 1",
+            "description": "This is the first task in the Get Started section."
+          },
+          {
+            "title": "Task 2",
+            "description": "This is the second task in the Get Started section."
+          },
+          {
+            "title": "Task 3",
+            "description": "This is the third task in the Get Started section."
+          }
+        ]
+      },
+      {
+        "title": "Task List",
+        "tasks": [
+          {
+            "title": "Task 1",
+            "description": "This is the first task in the Get Started section."
+          },
+          {
+            "title": "Task 2",
+            "description": "This is the second task in the Get Started section."
+          },
+          {
+            "title": "Task 3",
+            "description": "This is the third task in the Get Started section."
+          }
+        ]
+      },
+      {
+        "title": "Task List",
+        "tasks": [
+          {
+            "title": "Task 1",
+            "description": "This is the first task in the Get Started section."
+          },
+          {
+            "title": "Task 2",
+            "description": "This is the second task in the Get Started section."
+          },
+          {
+            "title": "Task 3",
+            "description": "This is the third task in the Get Started section."
+          }
+        ]
       }
     ]
   },
